# best-of-n-trajectory-transformer

./: .gitattributes  .gitignore  README.md  pyproject.toml  sitecustomize.py
docs/: claims.md  final_audit.md  novelty_map.md  proof_attack.md  reviewer_attacks.md
paper/: main.tex  references.bib
paper/final/: best of n trajectory transformer-v4-manifest.json
results/: all_episode_rows.csv  all_results.csv  claims_status.json  claims_status.md  smoke_episode_rows.csv  smoke_results.csv  summary.json
results/expansion/: aggregate_metrics.csv  claims.json  finite_law_stress.csv  manifest.json
results/pendulum_benchmark/: aggregate_metrics.csv  claims.json  effects.csv  manifest.json  metrics.csv  summary.json
scripts/: build_paper.ps1
src/trajectory_token_sieve/: __init__.py  audit.py  diagnostics.py  figures.py  model.py  pendulum_benchmark.py  theory.py  tokenizer.py
src/trajectory_token_sieve/experiments/: __init__.py  core.py  run_all.py  run_claim_audit.py  run_expansion_suite.py  run_pendulum_benchmark.py  run_smoke.py
src/trajectory_transformer_best_of_n/: __init__.py  audit.py  config.py  environment.py  figures.py  planning.py  theory.py
src/trajectory_transformer_best_of_n/experiments/: __init__.py  core.py
tests/: test_audit.py  test_diagnostics_repair.py  test_expansion_suite.py  test_model.py  test_pendulum_benchmark.py  test_theory.py  test_tokenizer.py
trajectory_token_sieve/: __init__.py
trajectory_transformer_best_of_n/: __init__.py
