[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-token-sieve"
version = "0.1.0"
description = "Synthetic diagnostics for reward-token tail risk in Trajectory Transformer style planning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jason Wang"}]
dependencies = [
  "numpy",
  "matplotlib",
  "gymnasium>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
